--- a/scss/style.scss
+++ b/scss/style.scss
@@ -54,8 +54,8 @@ header {
         display: flex;
         justify-content: center;
         align-items: center;
-        svg {
-          fill: $bgColor;
+        i {
+          color: $bgColor;
           height: 20px;
         }
       }
@@ -64,8 +64,8 @@ header {
       }
       li:hover {
         background-color: $bgColor;
-        svg {
-          fill: $mFontColor;
+        i {
+          color: $mFontColor;
         }
       }
     }
@@ -117,27 +117,26 @@ header {
     @include fontHeader(38px, #a8a8a8, 400);
     margin: 0px 0px 40px 65px;
   }
-  .description-text-block{
+  .description-text-block {
     max-width: 580px;
-    .description-text-block-header{
+    .description-text-block-header {
       @include fontBtnAndNav(21px, $additionColor, 400);
       border-left: 5px solid currentColor;
       padding-left: 20px;
       margin-bottom: 32px;
     }
-    .description-text-block-text{
+    .description-text-block-text {
       @include fontText(16px, $mFontColor, 400);
       margin-bottom: 20px;
     }
   }
-  .description-text-block-button{
+  .description-text-block-button {
     display: inline-block;
     border: 1px solid $additionColor;
-    padding: 10px 35px 16px 35px;
+    margin: 10px 35px 16px 35px;
     a {
       @include fontBtnAndNav(16px, $mFontColor, 400);
       text-decoration: none;
     }
   }
-  
 }
