--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -3,3 +3,13 @@ $additionColor: #8dfd1b;
 $bgBlocksColor: #222222;
 $bdFooterColor: #42006a;
 $mFontColor: #fff;
+$grayFontColor: #a8a8a8;
+
+$breakpoints: ( "phone": 480px, "tablet": 768px, "desktop": 1200px, );
+
+$mainPadding: 40px;
+
+$sizeFontHeader: 40px;
+$sizeFontTitle: 21px;
+$sizeFontSmallText: 16px;
+$sizeFontVerySmallText: 11px;
