--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -45,3 +45,14 @@
     line-height: $lh;
   }
 }
+@mixin mq($width, $type: min) {
+  @if map_has_key($breakpoints, $width) {
+    $width: map_get($breakpoints, $width);
+    @if $type == max {
+      $width: $width - 1px;
+    }
+    @media only screen and (#{$type}-width: $width) {
+      @content;
+    }
+  }
+}
